# rocos-app

./: .clang-format  .gitignore  CMakeLists.txt  README.md  robot-config.cmake.in  rocos_app.sh  rocos_ecm.sh  rocos_gripper.sh  ros2.sh  speed_scaling.csv
cmake/: rocos_app-config.cmake.in
config/: Violence.yaml  arm8.urdf  calculate.yaml  calibration.yaml  joint_config.yaml  joint_impedance_control.yaml  license  public.key  robot.urdf  robot_sun_new.urdf
config/HEBUT_DOUBLE/: base_link.STL  base_link_1.STL  l_link_1.STL  l_link_2.STL  l_link_3.STL  l_link_4.STL  l_link_5.STL  l_link_6.STL  l_link_7.STL  l_robot.urdf  r_link_1.STL  r_link_2.STL  r_link_3.STL  r_link_4.STL  r_link_5.STL  r_link_6.STL  r_link_7.STL  r_robot.urdf  双臂_1SLDASM.csv
config/TL20240901/: robot.urdf
config/TL20240901/TL20240901/: TL20240901-IO.csv  TL20240901-IO.xml  TL20240901.csv  TL20240901.ecc  TL20240901.xml
config/models/HEBUT/: HEBUT.urdf  link2.STL
config/models/talon/: robot.urdf
debug/: button_konb_pos.csv  button_konb_pos_invert.csv  commad_description.csv  command_log.csv  demo_1.csv  demo_1_inverst.csv  demo_1_new_inverst.csv  demo_2.csv  demo_2_inverst.csv  demo_3.csv  demo_3_inverst.csv  demo_4.csv  demo_4_inverst.csv  demo_5.csv  demo_5_inverst.csv  demo_6.csv  demo_6_inverst.csv  demo_7.csv  demo_7_inverst.csv  demo_8.csv  demo_8_inverst.csv  demo_process_1 copy.csv  demo_process_1.csv  ft_otg.csv  joints.csv  moveL_command.csv  null_motion.csv  readme.md  test.csv  test_inverst.csv
debug/log/: log.csv
debug/torque/: 1.csv
example/: CMakeLists.txt  rocosAppMain.cc
example/config/: robot.urdf
example/src/: robot_service.cc  rocosAppMain.cc
include/: JC_helper.hpp  JC_helper_TCP.hpp  JC_helper_authenticate.hpp  JC_helper_dynamics.hpp  JC_helper_kinematics.hpp  constants.hpp  drive.h  drive_guard.h  geometry.pb.cc  geometry.pb.h  hardware_interface.h  header.pb.cc  header.pb.h  highspeed_udp.hpp  interpolate.cpp  interpolate.h  kinematics.h  robot.h  robotMath.cpp  robotMath.h  robot_command.pb.cc  robot_command.pb.h  robot_info.pb.cc  robot_info.pb.h  robot_service.grpc.pb.cc  robot_service.grpc.pb.h  robot_service.h  robot_service.pb.cc  robot_service.pb.h  robot_state.pb.cc  robot_state.pb.h  ver.h.in
include/ethercat/: Command.h  Controlword.h  DriveState.h  Elmo.h  Error.hpp  Exception.hpp  ModeOfOperationEnum.h  Statusword.h  command.h  drive.h  ecat_config.hpp  hardware.h  hardware_interface.h  hardware_sim.h  status_word.h
include/my_include/: text_color.hpp
include/rocos_app/: JC_helper_FSM.hpp  JC_helper_TCP.hpp  JC_helper_authenticate.hpp  JC_helper_dynamics.hpp  JC_helper_kinematics.hpp  Logger.h  drive.h  drive_guard.h  ft_sensor_interface.h  hardware_interface.h  highspeed_udp.hpp  interpolate.h  kinematics.h  robot.h  robotMath.h  robot_service.h
include/rocos_app/ethercat/: command.h  control_word.h  drive_state.h  ft_sensor.h  ft_sensor_ecat.h  hardware.h  hardware_sim.h  mode_of_operation.h  status_word.h
protos/: robot_command.proto  robot_info.proto  robot_state.proto  robot_state_service.proto
src/: Command.cpp  Controlword.cpp  DriveState.cpp  Elmo.cpp  Force_impedance.cpp  JC_helper.cpp  JC_helper_FSM.cpp  JC_helper_authenticate.cpp  JC_helper_dynamics.cpp  JC_helper_kinematics.cpp  Statusword.cpp  Teaching_record.cpp  command.cc  command.cpp  control_word.cc  control_word.cpp  demo_Recordjoints.cpp  demo_Violence.cpp  demo_calculate6.cpp  drive.cc  drive.cpp  drive_guard.cc  drive_guard.cpp  drive_state.cc  ft_sensor.cc  ft_sensor_ecat.cc  ft_sensor_interface.cc  hardware.cc  hardware.cpp  hardware_interface.cc  hardware_interface.cpp  hardware_sim.cc  hardware_sim.cpp  int link_trajectory( std::vector< KDL::F.cpp  interpolate.cc  interpolate.cpp  kinematics.cc  logger.cc  robot.cc  robot.cpp  (+10 more)
test/: doctest.h  main_test.cc  mul_arm.cc  torque_test.cpp  unit_test.cc  unit_test.cpp
